--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </h2>
         <div class="controls">
           <button class="adjust"><i class="fas fa-sliders-h"></i></button>
-          <button class="lock"><i class="fa-lock-open"></i></button>
+          <button class="lock"><i class="fas fas fa-lock-open"></i></button>
         </div>
         <div class="sliders">
           <button class="close-adjustment">X</button>
@@ -59,7 +59,7 @@
         </h2>
         <div class="controls">
           <button class="adjust"><i class="fas fa-sliders-h"></i></button>
-          <button class="lock"><i class="fa-lock-open"></i></button>
+          <button class="lock"><i class="fas fa-lock-open"></i></button>
         </div>
         <div class="sliders">
           <button class="close-adjustment">X</button>
@@ -100,7 +100,7 @@
         </h2>
         <div class="controls">
           <button class="adjust"><i class="fas fa-sliders-h"></i></button>
-          <button class="lock"><i class="fa-lock-open"></i></button>
+          <button class="lock"><i class="fas fa-lock-open"></i></button>
         </div>
         <div class="sliders">
           <button class="close-adjustment">X</button>
@@ -141,7 +141,7 @@
         </h2>
         <div class="controls">
           <button class="adjust"><i class="fas fa-sliders-h"></i></button>
-          <button class="lock"><i class="fa-lock-open"></i></button>
+          <button class="lock"><i class="fas fa-lock-open"></i></button>
         </div>
         <div class="sliders">
           <button class="close-adjustment">X</button>
@@ -182,7 +182,7 @@
         </h2>
         <div class="controls">
           <button class="adjust"><i class="fas fa-sliders-h"></i></button>
-          <button class="lock"><i class="fa-lock-open"></i></button>
+          <button class="lock"><i class="fas fa-lock-open"></i></button>
         </div>
         <div class="sliders">
           <button class="close-adjustment">X</button>
