--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             min="0"
             max="1"
             step="0.01"
+            name="brightness"
             class="bright-input"
             data-bright="0"
           />
@@ -79,6 +80,7 @@
             min="0"
             max="1"
             step="0.01"
+            name="brightness"
             class="bright-input"
             data-bright="1"
           />
@@ -120,6 +122,7 @@
             min="0"
             max="1"
             step="0.01"
+            name="brightness"
             class="bright-input"
             data-bright="2"
           />
@@ -161,6 +164,7 @@
             min="0"
             max="1"
             step="0.01"
+            name="brightness"
             class="bright-input"
             data-bright="3"
           />
@@ -202,6 +206,7 @@
             min="0"
             max="1"
             step="0.01"
+            name="brightness"
             class="bright-input"
             data-bright="4"
           />
@@ -228,7 +233,7 @@
         <p>Generate</p>
       </div>
       <div class="save-panel">
-        <button class="genterate"><i class="fas fa-save"></i></button>
+        <button class="save"><i class="fas fa-save"></i></button>
         <p>Save</p>
       </div>
     </div>
@@ -239,10 +244,12 @@
       </div>
     </div>
     <div class="save-container">
-      <div class="close-save">X</div>
-      <h4>Give a name to your pallette</h4>
-      <input type="text" max-length="35" class="save-name" />
-      <button type="submit" class="submit-save">Save</button>
+      <div class="save-popup">
+        <button class="close-save">X</button>
+        <h4>Give a name to your pallette</h4>
+        <input type="text" max-length="35" class="save-name" />
+        <button type="submit" class="submit-save">Save</button>
+      </div>
     </div>
     <div class="library-container">
       <div class="library-popup">
